--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 certifi==2021.10.8
 charset-normalizer==2.0.12
+env-validate==0.4
 idna==3.3
 neo4j==4.4.2
+oauthlib==3.2.0
+Pillow==9.1.0
 python-dotenv==0.20.0
 pytz==2022.1
 requests==2.27.1
+requests-oauthlib==1.3.1
 urllib3==1.26.9
